Update branding, fix issues with unsubscribe page not rendering

--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "name": "dapp-mailer",
-  "alias": "dappmailer.giveth.io",
+  "alias": "dappmailer.b4h.world",
   "files": [
     "src",
     "config/production.json",
