--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dapp-mailer",
-  "description": "The Giveth Dapp Mailer Notification System",
+  "description": "The Dapp Mailer Notification System",
   "version": "0.0.0",
   "homepage": "",
   "main": "src",
@@ -27,9 +27,9 @@
     "build": "./node_modules/.bin/babel -d ./build src",
     "start": "babel-watch src ",
     "now-start": "node ./build NODE_ENV=production",
-    "deploy": "now && now alias && now rm dapp-mailer --safe --yes",    
+    "deploy": "now && now alias && now rm dapp-mailer --safe --yes",
     "mocha": "mocha test/ --recursive --exit",
-    "serve": "yarn build && node ./build NODE_ENV=production"   
+    "serve": "yarn build && node ./build NODE_ENV=production"
   },
   "dependencies": {
     "@feathersjs/errors": "^3.2.0",
@@ -37,19 +37,19 @@
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "express-react-views": "^0.10.4",
-    "feathers": "^2.2.3",
-    "feathers-configuration": "^0.4.2",
-    "feathers-errors": "^2.9.2",
-    "feathers-hooks": "^2.1.2",
-    "feathers-hooks-common": "^3.10.0",
-    "feathers-mongoose": "^6.0.0",
-    "feathers-rest": "^1.8.1",
-    "feathers-socketio": "^2.0.1",
+    "feathers": "2.2.3",
+    "feathers-configuration": "0.4.2",
+    "feathers-errors": "2.9.2",
+    "feathers-hooks": "2.1.2",
+    "feathers-hooks-common": "3.10.0",
+    "feathers-mongoose": "6.0.0",
+    "feathers-rest": "1.8.1",
+    "feathers-socketio": "2.0.1",
     "fs": "^0.0.1-security",
     "helmet": "^3.9.0",
     "lodash": "^4.17.4",
     "mail-time": "^0.1.7",
-    "mongoose": "^4.13.7",
+    "mongoose": "4.13.7",
     "mustache": "^2.3.0",
     "node-mailer": "^0.1.1",
     "nodemailer-mailgun-transport": "^1.3.6",
@@ -66,7 +66,7 @@
     "babel-register": "^6.26.0",
     "babel-watch": "^2.0.7",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"        
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
